feat: add frontend (wip)
